--- a/개념/자료형 변수 선언 방법.md
+++ b/개념/자료형 변수 선언 방법.md
@@ -37,4 +37,42 @@
         - 값 x가 여러개인 경우 맨 처음 x값 반환
         - 값 x가 없는 경우 에러 발생
       - list.clear() : 리스트에 저장된 모든 값 삭제
-
+- 튜플 : 튜플은 ()으로 둘러쌈
+  - 튜플은 값의 수정, 삭제가 불가능함.
+  - 인덱싱, 슬라이싱, 더하기, 곱하기, 길이 구하기 등은 가능
+- 딕셔너리 : 대응 관계를 나타내는 자료형, Key와 Value를 한 쌍으로 갖는 자료형
+  - {Key1:Value1, Key2:Value2, .....}
+  - Key는 변하지 않는 값을 사용
+  - Value는 변하는 값, 변하지 않는 값 둘 다 사용 가능
+  - 기본 형태 : a{1: 'a'}, a[2] = 'b' 
+  --> a = {1: 'a', 2: 'b'}
+  - 값 추가하기
+    - a['name'] = 'pey' --> a = {1: 'a', 2: 'b', 'name': 'pey'}
+    - a[3] = [1,2,3] --> a = {1: 'a', 2: 'b', 'name': 'pey', 3: [1,2,3]}
+  - 값 삭제하기
+    - del a['name'] a = {1: 'a', 2: 'b', 3: [1,2,3]}
+  - Key를 사용해서 Value를 구함. a[Key] >>Value
+  - Key에 리스트는 사용할 수 없지만 튜플은 사용 가능
+  - 함수들
+    - a.keys() : 딕셔너리 a의 Key만 모아서 dict_Keys 객체 반환
+    - dict_Keys의 객체를 리스트의 형태로 변환이 가능 list(a.keys())but, list의 append, insert, pop, remove, sort 함수는 수행 X
+    - a.Values() : 딕셔너리 a의 Value만 모아서 dict_Values 객체 반환
+    - a.items() : Key와 Value의 쌍을 튜플로 묶어 dict_items 객체 반환
+    - a.clear() : 딕셔너리 안의 모든 요소를 삭제
+    - a.get(X) : a 딕셔너리에 x라는 key의 Value값을 반환 = a[x], a[x]의 경우 x가 a 딕셔너리에 존재하지 않으면 Key 오류가 발생 but, a.get(x)의 경우 None을 반환
+    - 'X' in a : X라는 키가 a 딕셔너리에 존재하면 True 반환, 없다면 False 반환
+- 집합 자료형(set)
+  - s1 = set([1, 2, 3]), set()의 괄호 안에 리스트를 입력하여 만들거나 문자열을 입력하여 만들 수도 있음. ex> s2 = set("Hello") s2 = {'e','H','l','o'}
+  - 중복 허용하지 않음
+  - 순서가 없음 -> 인덱싱으로 값을 얻을 수 없음.
+  - s1 = set([1, 2, 3, 4, 5, 6]) / s2 = set([4, 5, 6, 7, 8, 9])
+  - 교집합 : s1 & s2 -> {4, 5, 6}
+  - 합집합 : s1 | s2 -> {1, 2, 3, 4, 5, 6, 7, 8, 9}
+  - 차집합 : s1 - s2 -> {1, 2, 3} = s1.difference(s2)
+  - s1 = set([1, 2, 3])
+    - 값 1개 추가 : add , s1.add(4) -> s1 = {1, 2, 3, 4}
+    - 값 여러개 추가 : update , s1.update([4, 5, 6]) -> s1 = {1, 2, 3,4, 5, 6}
+    - 특정 값 제거 : remove , s1.remove(2) -> s1 = {1, 3}
+- 불 자료형 : 참(true), 거짓(False)을 나타내는 자료형
+  - 참 : "python", [1,2,3], 1
+  - 거짓 : "", [], (), {}, 0, None
