--- a/개념/제어문.MD
+++ b/개념/제어문.MD
@@ -9,3 +9,7 @@
     - While 조건식:  <br> 
     실행문<br>
     증감식<br>
+- if-elif-else (조건문)
+  - if문은 다음과 같은 방식으로 사용한다.
+    - a = 5 , b = 7<br> if a > b:<br> print('a')<br>else:<br> print('b')
+    - elif는 else if와 같은 의미
