for문 정리 및 문제풀기

--- a/개념/제어문.MD
+++ b/개념/제어문.MD
@@ -13,3 +13,11 @@
   - if문은 다음과 같은 방식으로 사용한다.
     - a = 5 , b = 7<br> if a > b:<br> print('a')<br>else:<br> print('b')
     - elif는 else if와 같은 의미
+- for (반복문)
+  - for문은 다음과 같은 방식으로 사용한다.
+      - var_list=[1, 3, 5, 7]<br>for i in var_list<br> print(i)<br> >>>1 3 5 7<br> 
+      - for item in iterable:<br>... 반복할 구문...
+  - range
+      - for i in range(0,8,2)<br>print(i)<br>>>>0 2 4 6
+      - range(시작숫자, 종료숫자, step)<br>
+  *step은 숫자 사이의 간격을 의미
